--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "install": "npm run build"
   },
   "devDependencies": {
-    "coffee-script": "1.10.0",
     "coffeelint": "1.15.7"
+  },
+  "devDependencies": {
+    "coffee-script": "1.10.0"
   },
   "repository": {
     "type": "git",
